# pymaterials

./: .gitignore  backlog.4qr  bl.csv  bl.txt  constants.py  data.4qr  data.csv  data.txt  formatter.xlsm  hfr.csv  hfr.txt  materials.py  materials.py.bak  pyproject.toml  pyrightconfig.json  testes.py  validate.csv
data/: bl.csv  validate.csv
dev/: get_schedule_and_dates.py  rf.py  testes.py
src/: constants.py  materials.py  rf.py  schedule.py  schedule_doodle.py
