[project]
name = "pymaterials"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "requests>=2.32.4",
    "xlsxwriter>=3.2.5",
]
